--- a/news/templates/news.html
+++ b/news/templates/news.html
@@ -1,20 +1,17 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends "base.html" %} {% block content %}
 <div class="container">
-    {% for news in newss %}
-    <div class="card mb-3">
-        <div class="row g-0">
-            <div>
-                <div class="card-body">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ news.headline }}</h5>
-                        <p class="card-text">{{ news.body }}</p>
-                        <p class="card-text"><small class="text-muted">{{ news.date }}</small></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        {% endfor %}
+  {% for news in newss %}
+  <div class="card mb-3 mt-4>
+    <div class=" row g-8">
+    <div>
+      <div class="card-body">
+        <h5 class="card-title">{{news.headline}}</h5>
+        <p class="card-text">{{news.body}}</p>
+        <p class="card-text">
+          <small class="text-muted">{{news.date}}</small>
+        </p>
+      </div>
     </div>
+  </div>
 </div>
-{% endblock content %}
+{% endfor %} {% endblock content %}
