--- a/movie/templates/home.html
+++ b/movie/templates/home.html
@@ -1,94 +1,46 @@
-<<<<<<< HEAD
-<head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-</head>
-{% extends 'base.html' %}
-{% block content %}
-<div class="container"> <!--Mejora el espaciado de la pagina-->
-    <form action="">
-        <div class="mb-3">
-            <label for="searchMovie" class="form-label">
-                Search for Movie:
-            </label>
-            <input type="text" class="form-control" name="searchMovie" />
-        </div>
-        <button type="submit" class="btn btn-primary">Search</button>
-    </form>
-    <p>Searching for {{searchTerm}}</p>
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-        {%for movie in movies %}
-        <div v-for="movie in movies" class="col">
-            <div class="card">
-                <img class="card-img-top" src="{{movie.image.url}}" />
-                <div class="card-body">
-                    <h5 class="card-title">{{movie.title}}</h5>
-                    <p class="card-text">{{movie.description}}</p>
-                    {% if movie.genre %}
-                    <a class="card-text">{{movie.genre}}</a>
-                    {% endif %}
-                    <br>
-                    {% if movie.year %}
-                    <a class="card-text">{{movie.year}}</a>
-                    {% endif %}
-                    {% if movie.url %}
-                    <a href="{{movie.url}}" class="btn btn-primary">Movie Link</a>
-                    {% endif %}
-                </div>
-            </div>
-        </div>
-        {% endfor %}
-        <br>
-    </div>
-    <br>
-    <br>
-    <br>
-    <h2>Join our mailing list: </h2>
-    <form action="{% url 'signup' %}">
-        <div class="mb-3">
-            <label for="email" class="form-label">Enter your email: </label>
-            <input type="email" name="email" class="form-control">
-        </div>
-        <button type="submit" class="btn btn-primary">Sign Up</button>
-    </form>
-</div>
-{% endblock content %}
-=======
-<head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+{% extends "base.html" %} {% block content %}
+
 <div class="container">
-    <form action="">
-        <div class="mb-3">
-            <label for="searchMovie" class="form-label">
-                Search for Movie:
-            </label>
-            <input type="text" class="form-control" name="searchMovie" />
-        </div>
-        <button type="submit" class="btn btn-primary">Search</button>
-    </form>
-    <p>Searching for {{searchTerm}}</p>
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-        {% for movie in movies %}
-        <div v-for="movie in movies" class="col">
-            <div class="card">
-                <img class="card-img-top" src="{{movie.image.url}}" />
-                <div class="card-body">
-                    <h2 class="card-title fw-bold">{{movie.title}}</h2>
-                    <p class="card-text">{{movie.description}}</p>
-                    {% if movie.url %}
-                    <a href="{{movie.url}}" class="btn btn-primary">Movie Link</a>
-                    {% endif %}
-                </div>
-            </div>
-        </div>
-        {% endfor %}
-    </div>
-    <br>
-    <br>
+	<form action="">
+		<div class="mb-3">
+			<label for="searchMovie" class="form-label"> Search for Movie: </label>
+			<input type="text" class="form-control" name="searchMovie" />
+		</div>
+		<button type="submit" class="btn btn-primary">Search</button>
+	</form>
+
+	<p>Searching for {{searchTerm}}</p>
+
+	<div class="row row-cols-1 row-cols-md-3 g-4">
+		{% for movie in movies %}
+		<div v-for="movie in movies" class="col">
+			<div class="card" style="width: 25rem">
+				<img src="{{movie.img.url}}" class="card-img-top" />
+				<div class="card-body">
+					<h5 class="card-title">{{movie.title}}</h5>
+					<p class="card-text">{{movie.description}}</p>
+					<p class="card-text">{{movie.genre}}</p>
+					<p class="card-text">{{movie.year}}</p>
+					<a href="{{movie.url}}" class="btn btn-primary">Movie Link</a>
+				</div>
+			</div>
+		</div>
+		{% endfor %}
+	</div>
+
+	<br>
+	<br>
+	<br>
+
+	<h2>Join our miling list:</h2>
+	<form action="{% url 'signup' %}">
+		<div class="mb-3">
+			<label for="email" class="form-label">Enter your email:</label>
+			<input type="email" class="form-control" name="email">
+		</div>
+		<button type="submit" class="btn btn-primary">Sign up</button>
+	</form>
+
 </div>
->>>>>>> ae60163fc39d5cb5f4cd146166a880552bf3f717
+
+{% endblock content %}
