--- a/movie/templates/signup.html
+++ b/movie/templates/signup.html
@@ -1,2 +1,7 @@
+{% extends "base.html" %} {% block content %}
+
 <h2>Added {{ email }} to mailing list</h2>
-<a href="{% url 'home' %}">Home</a>
+
+<a href="{% url 'home' %}"></a>
+
+{% endblock content %}
